--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,4 @@ project(Snake)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Snake
-        .idea/.gitignore
-        .idea/modules.xml
-        .idea/Snake.iml
-        .idea/vcs.xml
-        .idea/workspace.xml
-        main.cpp)
+add_executable(main.cpp)
