--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,10 @@ project(Snake)
 set(CMAKE_CXX_STANDARD 20)
 set(BUILD_EXAMPLES OFF)
 
-add_subdirectory(lib/raylib)
+add_executable(main src/main.cpp)
 
-add_executable(Snake/main.cpp)
+include_directories(include)
 
-target_link_libraries(Snake raylib)
+find_library(RAYLIB raylib lib)
+
+target_link_libraries(main LINK_PUBLIC ${RAYLIB} winmm)
