drawSnake function bug resolved

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ add_executable(main src/main.cpp
         src/controller/GameController.cpp
         src/object/Apple.cpp
         src/view/GameView.h
-        src/view/GameView.cpp)
+        src/view/GameView.cpp
+        src/layer/Layer.h
+        src/layer/Layer.cpp)
 
 include_directories(include)
 
